recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:15: error: reassignment to val
  if (levels=0){
            ^SquareKoch:18: error: not found: value snow
  snow
  ^